--- a/mobile/presentation/src/main/res/layout/fragment_welcome.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_welcome.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/my_button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_welcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/my_button"
+        android:id="@+id/btn_welcome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -29,7 +29,7 @@
         android:backgroundTint="@color/main"
         android:fontFamily="@font/mulish"
         android:paddingVertical="12dp"
-        android:text="@string/select_photo"
+        android:text="@string/take_photo"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:cornerRadius="22dp"
