--- a/mobile/presentation/src/main/res/layout/fragment_welcome.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_welcome.xml
@@ -8,16 +8,47 @@
 
 
     <ImageView
-        android:scaleType="centerCrop"
         android:id="@+id/iv_enter_photo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/welcome_picture"
+        android:foregroundGravity="left"
+        android:src="@drawable/welcome_picture"
+        app:layout_constraintBottom_toTopOf="@+id/tv_description_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@null" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_description_top"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="-10dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:text="@string/tv_description_top"
+        android:textColor="@color/main"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tv_description_bottom"
+        app:layout_constraintEnd_toEndOf="@+id/tv_description_bottom"
+        app:layout_constraintStart_toStartOf="@+id/tv_description_bottom" />
+
+    <TextView
+        android:id="@+id/tv_description_bottom"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/mulish"
+        android:gravity="center"
+        android:text="@string/tv_description_bottom"
+        android:textColor="@color/text"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_welcome"
+        app:layout_constraintEnd_toEndOf="@+id/btn_welcome"
+        app:layout_constraintStart_toStartOf="@+id/btn_welcome" />
 
 
     <com.google.android.material.button.MaterialButton
