--- a/mobile/presentation/src/main/res/values/colors.xml
+++ b/mobile/presentation/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main">#FF192252</color>
+    <color name="text">#A9B4CD</color>
 </resources>
