--- a/mobile/presentation/src/main/res/layout/activity_main.xml
+++ b/mobile/presentation/src/main/res/layout/activity_main.xml
@@ -4,5 +4,5 @@
     android:id="@+id/fragment_container_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.gap.presentation.welcome.WelcomeFragment"
+    android:name="com.gap.presentation.welcome.StartFragment"
     tools:context="com.gap.presentation.MainActivity" />
