--- a/mobile/presentation/src/main/res/values/themes.xml
+++ b/mobile/presentation/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CarDamageScanner" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.CarDamageScanner" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/main</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
