--- a/mobile/presentation/src/main/res/layout/fragment_start.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_start.xml
@@ -30,38 +30,36 @@
         android:id="@+id/tv_main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/mulish"
         android:gravity="center"
         android:text="@string/start_main_text"
         android:textColor="@color/main"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:fontFamily="@font/mulish"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintBottom_toTopOf="@id/sign"
+        app:layout_constraintBottom_toTopOf="@id/btn_sign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sign"
+        android:id="@+id/btn_sign"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="90dp"
         android:backgroundTint="@color/main"
-        android:text="@string/next"
-        android:layout_marginHorizontal="16dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:padding="12dp"
         android:fontFamily="@font/mulish"
+        android:padding="12dp"
+        android:text="@string/next"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_main"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
