--- a/mobile/presentation/src/main/res/layout/fragment_login.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageButton"
+        android:id="@+id/ib_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
