--- a/mobile/presentation/src/main/res/values/colors.xml
+++ b/mobile/presentation/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#FF192252</color>
     <color name="text">#A9B4CD</color>
+    <color name="error">#FF0000</color>
+    <color name="grey">#F3F3F3</color>
+
 </resources>
