--- a/mobile/presentation/src/main/res/values/themes.xml
+++ b/mobile/presentation/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="boxStrokeColor">@color/main</item>
         <item name="hintTextColor">@color/black</item>
     </style>
+
+    <style name="EDIT_TEXT_INPUT_CODE">
+        <item name="android:background">@drawable/round_edit_text</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color_edit_text</item>
+    </style>
 </resources>
