--- a/mobile/presentation/src/main/res/drawable/round_edit_text_error.xml
+++ b/mobile/presentation/src/main/res/drawable/round_edit_text_error.xml
@@ -3,7 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="12dp" />
     <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/grey" />
+    <stroke android:width="1dp"
+        android:color="@color/error"/>
 </shape>
