--- a/mobile/presentation/src/main/res/layout/fragment_input_code.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_input_code.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <ImageView
@@ -38,12 +38,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:textColor="@color/main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/mulish"
         android:text="@string/your_code"
+        android:textColor="@color/main"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,17 +52,16 @@
 
     <View
         android:id="@+id/textView5"
-        android:background="@color/main"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
+        android:background="@color/main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView_input_number"
-        android:textColor="@color/main"
         android:layout_width="346dp"
         android:layout_height="85dp"
         android:layout_marginStart="16dp"
@@ -70,6 +69,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/mulish"
         android:gravity="center"
+        android:textColor="@color/main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -144,7 +144,7 @@
         android:textAlignment="center"
         android:textColor="@color/error"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/textViewTimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +152,6 @@
 
     <TextView
         android:id="@+id/textViewTimer"
-        android:textColor="@color/main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -161,6 +160,7 @@
         android:fontFamily="@font/mulish"
         android:gravity="center"
         android:text="@string/input_code_timer"
+        android:textColor="@color/main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -185,8 +185,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
