--- a/mobile/presentation/src/main/res/navigation/nav_graph.xml
+++ b/mobile/presentation/src/main/res/navigation/nav_graph.xml
@@ -57,6 +57,7 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/startFragment"
             app:popUpToInclusive="true" />
         <argument
             android:name="number"
