--- a/mobile/presentation/src/main/res/layout/fragment_input_code.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_input_code.xml
@@ -39,16 +39,16 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_height="0dp"
         android:fontFamily="@font/mulish"
         android:text="@string/your_code"
         android:textColor="@color/main"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/ib_back" />
 
     <View
         android:id="@+id/textView5"
