--- a/mobile/presentation/src/main/res/layout/fragment_home.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="2dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sign"
+        app:layout_constraintBottom_toTopOf="@+id/btn_create_report"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,13 +39,13 @@
         tools:listitem="@layout/item_report" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_sign"
+        android:id="@+id/btn_create_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/main"
-        android:enabled="false"
+        android:enabled="true"
         android:fontFamily="@font/mulish"
         android:padding="12dp"
         android:text="@string/scan_car"
@@ -55,5 +55,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/logout_48px"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_my_reports"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_my_reports"
+        android:contentDescription="@string/logout_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
