--- a/mobile/presentation/src/main/res/values/themes.xml
+++ b/mobile/presentation/src/main/res/values/themes.xml
@@ -19,4 +19,9 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textCursorDrawable">@drawable/cursor_color_edit_text</item>
     </style>
+
+    <style name="TEXT">
+        <item name="fontFamily">@font/mulish</item>
+        <item name="android:textColor">@color/main</item>
+    </style>
 </resources>
