--- a/mobile/presentation/src/main/res/navigation/nav_graph.xml
+++ b/mobile/presentation/src/main/res/navigation/nav_graph.xml
@@ -102,6 +102,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_startReportFragment_to_sendPhotosFragment"
+            app:destination="@id/sendPhotosFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/splashScreenFragment"
@@ -120,5 +127,18 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/sendPhotosFragment"
+        android:name="com.gap.presentation.main.SendPhotosFragment"
+        android:label="fragment_send_photos"
+        tools:layout="@layout/fragment_send_photos" >
+        <action
+            android:id="@+id/action_sendPhotosFragment_to_startReportFragment"
+            app:destination="@id/startReportFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
 </navigation>
