--- a/mobile/presentation/src/main/res/layout/fragment_start.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_start.xml
@@ -12,11 +12,12 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/start_car"
+        android:src="@drawable/welcome_picture"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@null" />
 
     <View
         android:id="@+id/divider"
