--- a/mobile/presentation/src/main/res/layout/fragment_start_report.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_start_report.xml
@@ -72,7 +72,7 @@
         android:backgroundTint="@color/main"
         android:fontFamily="@font/mulish"
         android:paddingVertical="12dp"
-        android:text="@string/take_photo"
+        android:text="@string/next"
         android:textAllCaps="false"
         android:textSize="18sp"
         app:cornerRadius="22dp"
