--- a/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
@@ -63,12 +63,12 @@
         app:layout_constraintTop_toTopOf="@+id/tv_back_part" />
 
     <ImageView
-        android:id="@+id/iv_right_part"
+        android:id="@+id/iv_back_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="4dp"
-        android:contentDescription="@string/left_part_of_car"
+        android:contentDescription="@string/back_part_of_car"
         android:src="@drawable/back_parts_car"
         app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,13 +90,13 @@
         app:layout_constraintTop_toBottomOf="@+id/view_left" />
 
     <ImageView
-        android:id="@+id/iv_back_part"
+        android:id="@+id/iv_right_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="@string/left_part_of_car"
+        android:contentDescription="@string/right_part_of_car"
         android:src="@drawable/right_left_parts_car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -121,13 +121,13 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/iv_left_part"
+        android:id="@+id/iv_front_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="@string/left_part_of_car"
+        android:contentDescription="@string/front_part_of_car"
         android:rotationY="-180"
         android:src="@drawable/front_parts_car"
         app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
@@ -167,7 +167,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_description_top" />
 
     <ImageView
-        android:id="@+id/iv_front_part"
+        android:id="@+id/iv_left_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
