--- a/mobile/presentation/src/main/res/navigation/nav_graph.xml
+++ b/mobile/presentation/src/main/res/navigation/nav_graph.xml
@@ -92,7 +92,7 @@
     </fragment>
     <fragment
         android:id="@+id/startReportFragment"
-        android:name="com.gap.presentation.main.StartReportFragment"
+        android:name="com.gap.presentation.main.createReport.StartReportFragment"
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_start_report">
         <action
@@ -130,7 +130,7 @@
     </fragment>
     <fragment
         android:id="@+id/sendPhotosFragment"
-        android:name="com.gap.presentation.main.SendPhotosFragment"
+        android:name="com.gap.presentation.main.createReport.SendPhotosFragment"
         android:label="fragment_send_photos"
         tools:layout="@layout/fragment_send_photos" >
         <action
