add permission to working with localhost, add logic working with network

--- a/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
@@ -215,8 +215,10 @@
         android:backgroundTint="@color/main"
         android:fontFamily="@font/mulish"
         android:paddingVertical="12dp"
+        android:textColor="@color/white"
         android:text="@string/Send"
         android:textAllCaps="false"
+        android:enabled="false"
         android:textSize="18sp"
         app:cornerRadius="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
