add progressBar in ReportFragment, add report logic

--- a/mobile/presentation/src/main/res/layout/fragment_report.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_report.xml
@@ -56,9 +56,9 @@
         android:layout_height="1dp"
         android:layout_marginTop="4dp"
         android:background="@color/grey_date"
+        android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        android:elevation="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title_date" />
 
@@ -107,18 +107,16 @@
 
             <ImageView
                 android:id="@+id/iv_right_part"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="8dp"
                 android:contentDescription="@string/left_part_of_car"
+                android:maxHeight="300dp"
                 android:src="@drawable/example_car_photo"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_front_part"
-                app:layout_constraintTop_toBottomOf="@+id/tv_right_part"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_right_part" />
 
             <TextView
                 android:id="@+id/tv_back_part"
@@ -137,10 +135,11 @@
 
             <ImageView
                 android:id="@+id/iv_back_part"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="10dp"
                 android:contentDescription="@string/left_part_of_car"
+                android:maxHeight="300dp"
                 android:src="@drawable/example_car_photo"
                 app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -164,10 +163,11 @@
 
             <ImageView
                 android:id="@+id/iv_left_part"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="10dp"
                 android:contentDescription="@string/left_part_of_car"
+                android:maxHeight="300dp"
                 android:src="@drawable/example_car_photo"
                 app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -181,12 +181,12 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="-100dp"
+                android:layout_marginEnd="16dp"
                 android:background="@color/grey_date"
-                app:layout_constraintEnd_toEndOf="@id/view_horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_left_part" />
+                app:layout_constraintTop_toBottomOf="@+id/tvLeftDescription" />
 
 
             <TextView
@@ -207,13 +207,13 @@
 
             <ImageView
                 android:id="@+id/iv_front_part"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="10dp"
                 android:contentDescription="@string/front_part_of_car"
+                android:maxHeight="300dp"
                 android:src="@drawable/example_car_photo"
                 app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_front_part"
                 app:layout_constraintTop_toBottomOf="@+id/tv_front_part" />
 
@@ -223,12 +223,12 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="-100dp"
+                android:layout_marginEnd="16dp"
                 android:background="@color/grey_date"
-                app:layout_constraintEnd_toEndOf="@id/view_horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_front_part" />
+                app:layout_constraintTop_toBottomOf="@+id/tvFrontDescription" />
 
             <View
                 android:id="@+id/view_back"
@@ -236,12 +236,82 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="-100dp"
+                android:layout_marginEnd="16dp"
                 android:background="@color/grey_date"
-                app:layout_constraintEnd_toEndOf="@id/view_horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_back_part" />
+                app:layout_constraintTop_toBottomOf="@+id/tvBackDescription" />
+
+            <TextView
+                android:id="@+id/tvFrontDescription"
+                style="@style/TEXT"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_front_part"
+                tools:text="" />
+
+            <TextView
+
+                android:id="@+id/tvLeftDescription"
+                style="@style/TEXT"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_left_part"
+                tools:text="" />
+
+            <TextView
+
+                android:id="@+id/tvBackDescription"
+                style="@style/TEXT"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_back_part"
+                tools:text="" />
+
+            <TextView
+
+                android:id="@+id/tvRightDescription"
+                style="@style/TEXT"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_right_part"
+                tools:text="" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
